[package]
name = "b256"
version = "0.4.1"
edition = "2024"
authors = ["Rotko Networks <hq@rotko.net>"]
description = "Dense byte to unicode character encoding"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rotkonetworks/b256"
keywords = ["encoding", "base256", "unicode", "no-std"]
categories = ["encoding", "no-std"]

[dependencies]

[[bin]]
name = "base256"
required-features = ["std"]

[features]
default = ["std"]
std = []
